<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:padding="2dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/workers"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/workers"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="number"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/listen_addr"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/listen_addr"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/listen_port"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/listen_port"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="number"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/udp_listen_addr"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/udp_listen_addr"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/udp_listen_port"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/udp_listen_port"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/bind_ipv4_addr"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/bind_ipv4_addr"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/bind_ipv6_addr"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/bind_ipv6_addr"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/bind_iface"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/bind_iface"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/auth_user"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/auth_user"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:text="@string/auth_pass"
			android:singleLine="true"/>
		<EditText
			android:id="@+id/auth_pass"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="textPassword"/>
		<CheckBox
			android:id="@+id/listen_ipv6_only"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/listen_ipv6_only"/>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Button
				android:id="@+id/save"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/save"/>
			<Button
				android:id="@+id/control"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/control_start"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
